--- a/HavenVanAntwerpen/notebook.ipynb
+++ b/HavenVanAntwerpen/notebook.ipynb
@@ -15,7 +15,8 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3"
+   "display_name": "Python 3",
+   "language": "python"
   }
  },
  "nbformat": 4,
@@ -23,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +91,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>VesselAISKey</th>\n      <th>AISTrajectPositionTimeStamp</th>\n      <th>AISTrajectPositionLongitude</th>\n      <th>AISTrajectPositionLatitude</th>\n      <th>AISTrajectPositionCourseOverGround</th>\n      <th>AISTrajectPositionSpeedOverGround,,,,</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>126</td>\n      <td>2018-01-10 08:53:58.867</td>\n      <td>3,212845087</td>\n      <td>51,31682968</td>\n      <td>0</td>\n      <td>0,,</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>126</td>\n      <td>2018-01-10 09:26:58.290</td>\n      <td>3,212833405</td>\n      <td>51,31681824</td>\n      <td>0</td>\n      <td>0,,</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>126</td>\n      <td>2018-01-10 09:56:59.190</td>\n      <td>3,212833405</td>\n      <td>51,31671524</td>\n      <td>0</td>\n      <td>0,,</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>126</td>\n      <td>2018-01-10 10:29:58.157</td>\n      <td>3,212815046</td>\n      <td>51,31678009</td>\n      <td>0</td>\n      <td>0,,</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>126</td>\n      <td>2018-01-10 11:02:58.967</td>\n      <td>3,212668419</td>\n      <td>51,31679153</td>\n      <td>0</td>\n      <td>0,,</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>126</td>\n      <td>2018-01-10 11:32:59.587</td>\n      <td>3,212796688</td>\n      <td>51,31678391</td>\n      <td>0</td>\n      <td>0,,</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>126</td>\n      <td>2018-01-10 12:05:59.207</td>\n      <td>3,212899923</td>\n      <td>51,3168335</td>\n      <td>0</td>\n      <td>0,,</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>126</td>\n      <td>2018-01-10 12:38:59.157</td>\n      <td>3,212896585</td>\n      <td>51,31676483</td>\n      <td>0</td>\n      <td>0,,</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>126</td>\n      <td>2018-01-10 13:08:59.920</td>\n      <td>3,212785006</td>\n      <td>51,31679916</td>\n      <td>0</td>\n      <td>0,,</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>126</td>\n      <td>2018-01-10 13:41:58.510</td>\n      <td>3,212863445</td>\n      <td>51,31678009</td>\n      <td>0</td>\n      <td>0,,</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 6
     }
    ],
    "source": [
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "tags": [
      "outputPrepend"
@@ -498,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,6 +508,13 @@
     "    for data in outputList:        \n",
     "        output_writer.writerow(data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
